--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,10 +19,10 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
 
-    "baseUrl": "./",
-    "paths": {
-        "@/*": ["src/*"]
-    },
+    // "baseUrl": "./",
+    // "paths": {
+    //     "@/*": ["src/*"]
+    // },
   },
-  "include": ["src/*"]
+  "include": ["src"]
 }
